# esscale_RS

./: README.md  test.html  testgit.cpp
.github/workflows/: demo.yml
ClientC/: CMakeLists.txt
ClientC/src/: ClientE.cpp  ClientW.cpp
ServerLibs/Employer/: CMakeLists.txt
ServerLibs/Employer/include/: Employer.hpp
ServerLibs/Employer/src/: main.cpp
ServerLibs/Worker/: CMakeLists.txt
ServerLibs/Worker/include/: Worker.hpp
ServerLibs/Worker/src/: main.cpp
ServerS/: CMakeLists.txt
ServerS/libs/shared/: Worker_lib.lib
ServerS/src/: Main.cpp
